--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,18 @@ h1 {
   font-size: 69;
 }
 
+h2 {
+  color: #d6d0c8;
+}
+
+h3 {
+  color: #d6d0c8;
+}
+
+p {
+  color: #d6d0c8;
+}
+
 nav li {
   display: inline-block;
 }
