--- a/styles.css
+++ b/styles.css
@@ -40,10 +40,11 @@ nav a:hover {
 }
 
 .indexh1 {
-  color: #a27201;
   font-size: 107;
   font-family: Microsoft Sans Serif;
+  color: #a27201;
 }
+
 .indexh2 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 69;
@@ -60,4 +61,16 @@ nav a:hover {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 69;
   color: #a27201;
+}
+
+.indexp1 {
+  color: #d6d0c8;
+}
+
+.indexp2 {
+  color: #d6d0c8;
+}
+
+.indexp3 {
+  color: #d6d0c8;
 }
