--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 body {
   background-color: #373736;
-  font-family: "Helvetica", Arial, sans-serif;
+  font-family: Montserrat, Helvetica, sans-serif;
 }
 
 h1 {
   font-family: "Montserrat Extra Light", "Helvetica", sans-serif;
   color: #e6b33e;
-  font-size: 69;
+  font-size: 2em;
 }
 
 h2 {
@@ -28,7 +28,7 @@ nav li {
 nav a {
   color: #d6d0c8;
   text-decoration: none;
-  padding: 10px;
+  padding: 1em;
 }
 
 nav a:hover {
