--- a/index.css
+++ b/index.css
@@ -2,9 +2,8 @@ body {
   background-color: #373736;
   font-family: Montserrat, Helvetica, sans-serif;
   background-image: url("images/watchingfilm.jpg");
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
-  max-width: cover;
 }
 
 h1 {
