--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ header {
   max-width: 200px;
 }
 
-body {
+main {
   background-color: #373736;
   font-family: Montserrat, Helvetica, sans-serif;
 }
