--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ header {
   max-width: 200px;
 }
 
-body {
+main {
   background-color: #373736;
   font-family: Montserrat, Helvetica, sans-serif;
   background-image: url("images/watchingfilm.jpg");
@@ -63,4 +63,8 @@ nav a:hover {
 
 .active {
   text-decoration: underline;
+}
+
+.action {
+  display: inline;
 }
