--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,12 @@ nav a:hover {
   text-decoration: double;
 }
 
+.right-menu {
+  display: inline-block;
+  color: #d6d0c8;
+  font-size: 1em;
+}
+
 .active {
   text-decoration: underline;
 }
