--- a/styles/hamburger.css
+++ b/styles/hamburger.css
@@ -1,6 +1,8 @@
 header {
   background: #1b1b1b;
   min-height: 100px;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .logo {
@@ -71,4 +73,57 @@ nav a:hover {
   nav a {
     padding: 19% 40px;
   }
-}
+
+  .right-menu {
+    display: inline-block;
+    color: #d6d0c8;
+    font-size: 1em;
+  }
+  
+  main {
+    background-color: #373736;
+    font-family: Montserrat, Helvetica, sans-serif;
+    background-image: url("images/watchingfilm.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  
+  h1 {
+    font-family: Montserrat, Helvetica, sans-serif;
+    color: #a27201;
+    font-size: 3em;
+  }
+  
+  h2 {
+    font-family: Montserrat, sans-serif;
+    color: #e6b33e;
+    font-size: 2em;
+  }
+  
+  h3 {
+    font-family: Montserrat, sans-serif;
+    color: #a27201;
+    font-size: 2em;
+  }
+  
+  h4 {
+    font-family: Montserrat, sans-serif;
+    color: #e6b33e;
+    font-size: 2em;
+  }
+  
+  p {
+    font-family: Roboto, sans-serif;
+    color: #d6d0c8;
+    font-size: 1em;
+  }
+
+  .active {
+    text-decoration: underline;
+  }
+  
+  .index-picture {
+    max-width: 100px;
+    float: right;
+    border-radius: 50%;
+  }
