--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,8 @@ header {
   background-color: #1b1b1b;
   background-size: contain;
   background-repeat: no-repeat;
-  max-height: 200px;
+  border-top: 1px;
+  margin-top: -1px;
 }
 
 .right-nav {
