--- a/styles/index.css
+++ b/styles/index.css
@@ -95,7 +95,8 @@ nav a:hover {
 
 .index-section2 {
   width: 700px;
-  height: 300px;
+  height: 200px;
   padding: 40px;
   background: #282827;
+  margin-top: -50px;
 }
