--- a/styles/index.css
+++ b/styles/index.css
@@ -15,7 +15,7 @@ header .right-nav {
 
 .logo {
   max-height: 100px;
-  margin-top: 0;
+  margin-top: -50;
   float: left;
 }
 
@@ -30,6 +30,7 @@ main {
 
 .index-picture2 {
   max-width: 100%;
+  margin-top: -50px;
 }
 
 h1 {
