--- a/styles/index.css
+++ b/styles/index.css
@@ -89,9 +89,9 @@ nav a:hover {
 }
 
 .content-wrap {
-  max-width: 1200px;
+  max-width: 1000px;
   margin: 0 auto;
-  padding: 50px 0 50px 0;
+  padding: 50px;
 }
 
 .index-section2 {
