--- a/styles/index.css
+++ b/styles/index.css
@@ -44,6 +44,8 @@ h2 {
   font-family: Montserrat, sans-serif;
   color: #e6b33e;
   font-size: 2em;
+  margin-top: 0;
+  border-radius: 0px 0px 10px 10px;
 }
 
 h3 {
