--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,13 @@
+/* apply a natural box layout model to all elements, but allowing components to change */
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 header {
   background-color: #1b1b1b;
   background-size: contain;
