--- a/styles/styles.css
+++ b/styles/styles.css
@@ -95,7 +95,8 @@ nav a:hover {
   border-radius: 10px 10px 10px 10px;
   max-width: 30%;
   float: left;
-  border: #a27201;
+  margin: #373736;
+  border: 1px, #a27201;
   border-radius: 10px;
 }
 
