--- a/styles/index.css
+++ b/styles/index.css
@@ -14,6 +14,9 @@ header {
   background-repeat: no-repeat;
   border-top: 1px;
   margin-top: -1px;
+}
+
+.sticky-content {
   position: sticky;
 }
 
