--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,3 @@
-/* apply a natural box layout model to all elements, but allowing components to change */
-html {
-  box-sizing: border-box;
-}
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
 header {
   background-color: #1b1b1b;
   background-size: contain;
@@ -16,7 +6,7 @@ header {
   margin-top: -1px;
 }
 
-header .sticky-content {
+header .logo .right-nav {
   position: sticky;
 }
 
