--- a/styles/index.css
+++ b/styles/index.css
@@ -23,6 +23,13 @@ header .right-nav {
   float: left;
 }
 
+.navbar {
+  overflow: hidden;
+  background-color: #1b1b1b;
+  position: sticky;
+  top: 0;
+}
+
 nav li {
   display: inline-block;
 }
@@ -32,7 +39,7 @@ nav a {
   text-decoration: none;
   padding: 1em;
   overflow: hidden;
-  background-color: 1b1b1b;
+
   display: block;
   float: left;
   padding: 14px 20px;
