--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,7 @@
 header {
+  width: 100%;
+  height: 100px;
+  display: block;
   background-color: #1b1b1b;
   padding: 0px;
 }
@@ -11,7 +14,7 @@ header .right-nav {
 }
 
 .logo {
-  max-height: 100px;
+  max-height: 100%;
   margin-top: 0;
   float: left;
 }
