--- a/styles/index.css
+++ b/styles/index.css
@@ -125,3 +125,12 @@ p {
   float: right;
   margin-top: 2%;
 }
+
+.index-section4 {
+  width: 700px;
+  height: 130px;
+  padding: 40px;
+  background: #a27201;
+  border-radius: 10px;
+  margin-left: 5%;
+}
