--- a/styles/index.css
+++ b/styles/index.css
@@ -97,7 +97,7 @@ p {
 
 .index-picture {
   max-width: 100px;
-  float: right;
+  float: left;
   border-radius: 50%;
 }
 
@@ -135,4 +135,24 @@ p {
   border-radius: 10px;
   margin-left: 5%;
   margin-top: 2%;
+}
+
+.button1 {
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #a27201;
+  color: #d6d0c8;
+  text-decoration: none;
+  font-family: sans-serif;
+  font-size: 1em;
+}
+
+.button2 {
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #373736;
+  color: #d6d0c8;
+  text-decoration: none;
+  font-family: sans-serif;
+  font-size: 1em;
 }
