--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,23 +1,29 @@
 header {
+  width: 100%;
+  height: 100px;
+  display: block;
   background-color: #1b1b1b;
-  background-size: contain;
-  background-repeat: no-repeat;
-  max-height: 500px;
+  padding: 0px;
 }
 
-.right-nav {
-  display: inline-block;
+header .right-nav {
   color: #d6d0c8;
   font-size: 1em;
+  float: right;
+  margin: 0;
 }
 
-.logo {
-  max-width: 200px;
+header .logo {
+  max-height: 100px;
+  margin-top: 0;
   float: left;
 }
 
-.logo .right-nav {
-  float: right;
+.navbar {
+  overflow: hidden;
+  background-color: #1b1b1b;
+  position: sticky;
+  top: 0;
 }
 
 main {
