--- a/styles/styles.css
+++ b/styles/styles.css
@@ -126,3 +126,12 @@ body {
   max-width: 1200px;
   margin: 0 auto;
 }
+
+.drama,
+.documentary,
+.action {
+  width: 100%;
+  display: flex;
+  flex-flow: nowrap;
+  justify-content: center;
+}
