--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,9 +130,13 @@ body {
 .drama,
 .documentary,
 .action {
-  width: 100%;
+  width: 55%;
   display: flex;
   flex-flow: nowrap;
-  justify-content: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  margin: auto;
+}
+
+.films-h2 {
+  margin-left: 30%;
 }
