--- a/styles/styles.css
+++ b/styles/styles.css
@@ -134,9 +134,11 @@ body {
   display: flex;
   flex-flow: nowrap;
   justify-content: space-between;
-  margin: auto;
+  margin-inline: auto;
+  margin-top: -16px;
 }
 
 .films-h2 {
-  margin-left: 30%;
+  margin-left: 23%;
+  margin-top: 5%;
 }
