--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,7 +57,7 @@ h1 {
   font-family: Montserrat, Helvetica, sans-serif;
   color: #e6b33e;
   font-size: 2em;
-  margin: auto;
+  text-align: center;
 }
 
 h2 {
@@ -73,6 +73,10 @@ h3 {
 p {
   font-family: Roboto, sans-serif;
   color: #d6d0c8;
+}
+
+.h1-subtext {
+  text-align: center;
 }
 
 .action {
