--- a/styles/styles.css
+++ b/styles/styles.css
@@ -152,8 +152,8 @@ body {
   position: relative;
   overflow: hidden;
   /* 'viewbox' - set size below to match native image height & width */
-  width: 400px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
 }
 figure img {
   float: left;
