--- a/styles/styles.css
+++ b/styles/styles.css
@@ -149,5 +149,8 @@ body {
 }
 
 .heading-content {
-  padding: #282827;
+  width: 100%;
+  height: 130px;
+  padding: 40px;
+  background-color: #282829;
 }
