--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,7 +45,8 @@ nav a:hover {
 }
 
 .active {
-  text-decoration: underline;
+  text-decoration: none;
+  border-bottom: solid #a27201 2px;
 }
 
 main {
@@ -149,8 +150,12 @@ body {
 }
 
 .heading-content {
-  width: 100%;
   height: 130px;
   padding: 40px;
   background-color: #282829;
+}
+
+.new-releases {
+  display: block;
+  align-content: center;
 }
