--- a/styles/films.css
+++ b/styles/films.css
@@ -50,9 +50,9 @@ nav a:hover {
 }
 
 main {
-  background-color: #373736;
   font-family: Montserrat, Helvetica, sans-serif;
   background-image: url(../images/background-films.jpg);
+  background-size: cover;
 }
 
 h1 {
