--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,7 +98,7 @@ p {
   border-radius: 10px 10px 10px 10px;
 }
 
-.producercol {
+.producer-col {
   width: 70%;
   float: right;
   background-color: #373736;
