--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,13 +96,16 @@ p {
 .producer {
   width: 30%;
   border-radius: 10px 10px 10px 10px;
+  padding: 20px;
+  border: 1px solid #a27201;
+  float: left;
 }
 
 .producer-col {
   width: 70%;
   float: right;
   background-color: #373736;
-  margin: 20px;
+  padding: 20px;
   border: 1px, solid #e6b33e;
   border-radius: 10px;
 }
