--- a/styles/pop-up.css
+++ b/styles/pop-up.css
@@ -1,26 +1,38 @@
-main {
+body {
   background-color: #373736;
   font-family: Montserrat, Helvetica, sans-serif;
+  margin: 0;
 }
 
 h1 {
   font-family: Montserrat, Helvetica, sans-serif;
-  color: #e6b33e;
+  color: #373736;
   font-size: 2em;
 }
 
 p {
   font-family: Roboto, sans-serif;
-  color: #d6d0c8;
+  color: #a27201;
 }
 
 a {
   color: #d6d0c8;
   text-decoration: none;
   padding: 1em;
+  background-color: #a27201;
+  border: solid #a27201;
+  border-radius: 0 10px 10px 0;
 }
 
 .fas {
   color: #d6d0c8;
   size: 2em;
+}
+
+.popup-section {
+  padding: 14px;
+  background-color: #d6d0c8;
+  margin: auto;
+  border: solid #a27201;
+  border-radius: 10px;
 }
