--- a/styles/pop-up.css
+++ b/styles/pop-up.css
@@ -1,7 +1,7 @@
 body {
   background-color: #373736;
   font-family: Montserrat, Helvetica, sans-serif;
-  margin: 0;
+  margin: 15% 30%;
 }
 
 h1 {
