--- a/styles/pop-up.css
+++ b/styles/pop-up.css
@@ -20,8 +20,6 @@ p {
 button {
   color: #d6d0c8;
   text-decoration: none;
-  padding: 2%;
-  padding-inline: 6%;
   background-color: #a27201;
   border: solid #a27201;
   border-radius: 0 10px 10px 0;
@@ -43,10 +41,11 @@ button {
 .search-input {
   border: solid #a27201;
   border-radius: 10px 0 0 10px;
-  padding: 3%;
-  padding-right: 20%;
 }
 
 .form-section {
   display: flex;
+  justify-content: center;
+  align-items: stretch;
+  flex-basis: auto;
 }
