--- a/styles/pop-up.css
+++ b/styles/pop-up.css
@@ -41,11 +41,12 @@ button {
 .search-input {
   border: solid #a27201;
   border-radius: 10px 0 0 10px;
+  padding: 3%;
+  padding-right: 20%;
 }
 
 .form-section {
   display: flex;
   justify-content: center;
   align-items: stretch;
-  flex-basis: auto;
 }
