--- a/styles/pop-up.css
+++ b/styles/pop-up.css
@@ -1,7 +1,7 @@
 body {
   background-color: #373736;
   font-family: Montserrat, Helvetica, sans-serif;
-  margin: 15% 30%;
+  margin: 10% 30%;
 }
 
 h1 {
@@ -10,6 +10,7 @@ h1 {
   font-size: 3em;
   font-weight: 400;
   text-align: center;
+  margin-bottom: 2%;
 }
 
 p {
