--- a/styles/pop-up.css
+++ b/styles/pop-up.css
@@ -10,7 +10,7 @@ h1 {
   font-size: 3em;
   font-weight: 400;
   text-align: center;
-  margin-bottom: 2%;
+  margin: 2%;
 }
 
 p {
@@ -19,6 +19,8 @@ p {
   text-align: center;
   font-style: italic;
   font-weight: 200;
+  font-size: 12px;
+  margin: 1%;
 }
 
 button {
