--- a/styles/pop-up.css
+++ b/styles/pop-up.css
@@ -27,7 +27,7 @@ button {
   text-decoration: none;
   background-color: #a27201;
   border: solid 1px #a27201;
-  border-radius: 0 10px 10px 0;
+  border-radius: 0 5px 5px 0;
 }
 
 .fas {
@@ -46,7 +46,7 @@ button {
 
 .search-input {
   border: solid 1px #a27201;
-  border-radius: 10px 0 0 10px;
+  border-radius: 5px 0 0 5px;
   padding: 3%;
   padding-right: 20%;
 }
@@ -64,17 +64,17 @@ button {
 }
 
 a {
-  color: #3e73e6;
   font-family: Roboto, sans-serif;
-  font-style: italic;
-  font-weight: 200;
+  color: #3e73e6;
+  text-align: center;
+  font-weight: 400;
   font-size: 12px;
   margin: 1%;
 }
 
 .button1 {
   padding: 8px;
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: #a27201;
   font-family: sans-serif;
   border: solid #a27201;
@@ -94,4 +94,13 @@ fieldset {
 label {
   font-family: roboto;
   color: #373736;
+}
+
+.not-a-member {
+  font-family: Roboto, sans-serif;
+  color: #373736;
+  text-align: center;
+  font-weight: 400;
+  font-size: 12px;
+  margin: 1%;
 }
