--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,6 +122,7 @@ p {
   padding: 20px;
   border: 1px solid #a27201;
   flex: 1;
+  order: 1;
 }
 
 .producer-col {
@@ -132,6 +133,7 @@ p {
   border-radius: 10px;
   min-height: 240px;
   flex: 2;
+  order: 2;
 }
 
 .profile-picture {
