--- a/styles/styles.css
+++ b/styles/styles.css
@@ -117,18 +117,19 @@ p {
 }
 
 .producer {
-  width: 30%;
-  border-radius: 10px 10px 10px 10px;
-  padding: 20px;
-  border: 1px solid #a27201;
-}
-
-.producer-col {
-  width: 40%;
+  width: 50%;
   border-radius: 10px 10px 10px 10px;
   padding: 20px;
   border: 1px solid #a27201;
   margin-left: 40%;
+}
+
+.producer-col {
+  width: 60%;
+  border-radius: 10px 10px 10px 10px;
+  padding: 20px;
+  border: 1px solid #a27201;
+  margin-right: 40%;
 }
 
 .profile-picture {
