--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,6 +122,8 @@ p {
   padding: 20px;
   border: 1px solid #a27201;
   margin-left: 40%;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 
 .producer-col {
