--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,6 +132,8 @@ p {
   padding: 20px;
   border: 1px solid #a27201;
   margin-right: 40%;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 
 .profile-picture {
