--- a/styles/index.css
+++ b/styles/index.css
@@ -120,10 +120,7 @@ p {
   padding: 40px;
   border: #a27201 solid;
   border-radius: 10px;
-  margin-right: 5%;
-  position: relative;
-  margin-top: 2%;
-  left: 35%;
+  display: f;
 }
 
 .index-section4 {
