--- a/styles/index.css
+++ b/styles/index.css
@@ -171,7 +171,7 @@ p {
   text-decoration: none;
 }
 
-.index-section3 .fas {
+.index-section3 i {
   margin-right: 15%;
   font-size: 6em;
   float: right;
