--- a/styles/index.css
+++ b/styles/index.css
@@ -80,7 +80,7 @@ h3 {
   font-family: Montserrat, sans-serif;
   color: #a27201;
   font-size: 2em;
-  margin-right: 15%;
+  margin-left: 15%;
 }
 
 h4 {
