--- a/styles/index.css
+++ b/styles/index.css
@@ -130,7 +130,7 @@ p {
   padding: 40px;
   background: #282827;
   border-radius: 0px 0px 10px 10px;
-  margin: 0 0 5% 5%;
+  margin: 40% 0 5% 5%;
 }
 
 .index-section3 {
