--- a/styles/index.css
+++ b/styles/index.css
@@ -69,7 +69,7 @@ h1 {
   font-family: Montserrat, Helvetica, sans-serif;
   color: #a27201;
   font-size: 3.7em;
-  margin: 41% 0 0 0;
+  margin: 35% 0 2% 0;
 }
 
 h2 {
