--- a/styles/index.css
+++ b/styles/index.css
@@ -46,7 +46,7 @@ nav a:hover {
 
 .active {
   text-decoration: underline 2px #a27201;
-  text-underline-position: below;
+  text-underline-position: under;
 }
 
 body {
