--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,7 +198,7 @@ body {
   margin: auto;
 }
 
-.flex-content {
+.grid-content {
   display: grid;
   grid-template-columns: 40% 60%;
   align-items: stretch;
@@ -230,4 +230,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 4%;
+  border: solid 1px #a27201;
+  border-radius: 10px;
+  background-color: #5d5d5c;
 }
