--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,6 +69,7 @@ nav a:hover {
 
 main {
   background-color: #373736;
+  background: cover;
   font-family: Montserrat, Helvetica, sans-serif;
 }
 
@@ -234,4 +235,13 @@ body {
   border: solid 1px #a27201;
   border-radius: 10px;
   background-color: #5d5d5c;
+  min-width: 30%;
+  margin-inline: 2%;
+}
+
+.flex-content {
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  margin-inline: 10%;
 }
