--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+body {
+  font-family: Montserrat, Helvetica, sans-serif;
+  margin: 0;
+  background-color: #373736;
+}
+
 header {
   width: 100%;
   height: 100px;
@@ -176,11 +182,6 @@ p {
   display: block;
   border: #e6b33e;
   border-radius: 10px;
-}
-
-body {
-  font-family: Montserrat, Helvetica, sans-serif;
-  margin: 0;
 }
 
 .content-wrap {
