--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@ body {
   font-family: Montserrat, Helvetica, sans-serif;
   margin: 0;
   background-color: #373736;
+  background: cover;
 }
 
 header {
