--- a/styles/styles.css
+++ b/styles/styles.css
@@ -244,6 +244,10 @@ p {
   margin-right: 80%;
 }
 
+.create-account-button {
+  margin: 10% 20% 0 20%;
+}
+
 .flex-content {
   display: flex;
   justify-content: center;
