--- a/styles/styles.css
+++ b/styles/styles.css
@@ -162,12 +162,7 @@ p {
   border-radius: 10px 10px 10px 10px;
   padding: 20px;
   border: 1px solid #a27201;
-  margin-right: 40%;
-  margin-top: 30px;
-  margin-bottom: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  margin: 30px 40% 10px 0;
 }
 
 .profile-picture {
