--- a/styles/styles.css
+++ b/styles/styles.css
@@ -160,7 +160,7 @@ p {
 .producer-col {
   width: 60%;
   border-radius: 10px 10px 10px 10px;
-  padding: 20px;
+  padding: 5%;
   border: 1px solid #a27201;
   margin: 30px 40% 10px 0;
 }
@@ -237,6 +237,7 @@ p {
 
 .profile-button {
   margin-right: 80%;
+  margin-bottom: 5%;
 }
 
 .create-account-button {
