--- a/styles/styles.css
+++ b/styles/styles.css
@@ -260,3 +260,14 @@ fieldset {
   background-color: #373736;
   border: 0;
 }
+
+.h1-form {
+  font-size: 2em;
+}
+
+label {
+  font-size: 13px;
+  font-family: Roboto, sans-serif;
+  text-transform: uppercase;
+  color: #d6d0c8;
+}
