--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,8 +168,8 @@ p {
   display: block;
   border: solid 1px #e6b33e;
   border-radius: 5px;
-  padding: 1% 15%;
-  color: #d6d0c8;
+  padding: 1% 15% 1% 1%;
+  background-color: #d6d0c8;
 }
 
 .content-wrap {
