--- a/styles/styles.css
+++ b/styles/styles.css
@@ -260,6 +260,7 @@ fieldset {
   font-size: 2em;
   background-color: #373736;
   border: 0;
+  margin: auto;
 }
 
 .h1-form {
@@ -282,9 +283,10 @@ label {
   background-color: #d6d0c8;
   border: solid 1px #a27201;
   border-radius: 2px;
+  margin-left: 23%;
 }
 
 .newsletter-section {
   display: flex;
-  align-items: baseline;
+  align-items: stretch;
 }
