--- a/styles/styles.css
+++ b/styles/styles.css
@@ -291,3 +291,14 @@ label {
   display: flex;
   align-items: stretch;
 }
+
+.cirle {
+  color: #a27201;
+  opacity: 0.5;
+  font-size: 10px;
+  margin: auto;
+}
+
+.active-cirle {
+  opacity: 1;
+}
