--- a/styles/styles.css
+++ b/styles/styles.css
@@ -296,9 +296,9 @@ label {
   color: #a27201;
   opacity: 0.5;
   font-size: 10px;
-  margin: auto;
 }
 
 .active-circle {
-  opacity: 1;
+  color: #a27201;
+  font-size: 12px;
 }
